# simple-client-api

./: .gitignore  HINTS.MD  LINKS.md  README.md  bd.sql  buildall.sh  docker-compose.yml  ms-bd.sql  pg-db.sql
.alternative-versions/clientex-plug/: .gitignore
.alternative-versions/clientgo-eureka/: README.md  go.mod  go.sum
clientcj/: project.clj
clientex/: .gitignore  Dockerfile  README.md  mix.exs
clientex2/: README.md  mix.exs
clientgo/: .env  Dockerfile  Makefile  README.md  app.go  go.mod  go.sum  main.go  model.go
clientgo-echo/: .env  README.md  go.mod  go.sum  main.go  server.bkp
clientgov2/: .env  go.sum  main.go
clientgov3/: docker-compose.yml  main.go
clientgov4/: .env  Dockerfile  go.mod  go.sum  main.go  main_test.go  sd.go
clientjs/: Dockerfile  README.md  package.json  server.js
clientpy/: README.md  app-cp copy.py  app-cp.py  app.py
clientrb/: README.md
clientrs/: .env  Cargo.toml  Dockerfile  README.md
clientrs/migrations/2019-09-17-223541_cli/: up.sql
clientrs/migrations/2019-09-27-211728_create_cli/: down.sql  up.sql
clientrs/src/: connection.rs  cors.rs  main.rs  models.rs  routes.rs  schema.rs
clientrs/src/client/: handler.rs  mod.rs  repository.rs  router.rs
clientsb/: .gitignore  Dockerfile  README.md  build.gradle  settings.gradle
clojure-rest-api/: README.md
eurekasrv/: Dockerfile  build.gradle  run.sh  settings.gradle
node-simple-api/: app.js  package-lock.json  package.json
services-consumer/: .gitignore  Dockerfile  README.md  build.gradle  settings.gradle
zuulsrv/: Dockerfile  build.gradle  run.sh
(+130 files in other folders)
